JumpScript/tests/baselines/reference/ambientExportDefaultErrors.errors.txt
tests/cases/compiler/foo.d.jump(1,16): error TS2714: The expression of an export assignment must be an identifier or qualified name in an ambient context.
tests/cases/compiler/foo2.d.jump(1,10): error TS2714: The expression of an export assignment must be an identifier or qualified name in an ambient context.
tests/cases/compiler/indirection.d.jump(3,20): error TS2714: The expression of an export assignment must be an identifier or qualified name in an ambient context.
tests/cases/compiler/indirection2.d.jump(3,14): error TS2714: The expression of an export assignment must be an identifier or qualified name in an ambient context.


==== tests/cases/compiler/consumer.jump (0 errors) ====
    /// <reference path="./indirection.d.jump" />
    /// <reference path="./indirection2.d.jump" />
    import "indirect";
    import "foo";
    import "indirect2";
    import "foo2";
==== tests/cases/compiler/foo.d.jump (1 errors) ====
    export default 2 + 2;
                   ~~~~~
!!! error TS2714: The expression of an export assignment must be an identifier or qualified name in an ambient context.
    export as namespace Foo;
    
==== tests/cases/compiler/foo2.d.jump (1 errors) ====
    export = 2 + 2;
             ~~~~~
!!! error TS2714: The expression of an export assignment must be an identifier or qualified name in an ambient context.
    export as namespace Foo2;
    
==== tests/cases/compiler/indirection.d.jump (1 errors) ====
    /// <reference path="./foo.d.jump" />
    declare module "indirect" {
        export default typeof Foo.default;
                       ~~~~~~~~~~~~~~~~~~
!!! error TS2714: The expression of an export assignment must be an identifier or qualified name in an ambient context.
    }
    
==== tests/cases/compiler/indirection2.d.jump (1 errors) ====
    /// <reference path="./foo2.d.jump" />
    declare module "indirect2" {
        export = typeof Foo2;
                 ~~~~~~~~~~~
!!! error TS2714: The expression of an export assignment must be an identifier or qualified name in an ambient context.
    }
    